--- a/index.html
+++ b/index.html
@@ -584,19 +584,19 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-4 marb20">
+                    <!--<div class="col-md-4 col-sm-4 marb20">
                         <div class="ftr-tle">
                             <h4 class="white no-padding">Réseaux</h4>
                         </div>
                         <div class="info-sec">
                             <ul class="social-icon">
-                                <li class="bglight-blue"><i class="fa fa-facebook"></i></li>
-                                <li class="bgred"><i class="fa fa-google-plus"></i></li>
-                                <li class="bgdark-blue"><i class="fa fa-linkedin"></i></li>
-                                <li class="bglight-blue"><i class="fa fa-twitter"></i></li>
+                                <li class="bglight-blue"><a><i class="fa fa-facebook"></i></a></li>
+                                <li class="bgred"><a><i class="fa fa-google-plus"></i></a></li>
+                                <li class="bgdark-blue"><a><i class="fa fa-linkedin"></i></a></li>
+                                <li class="bglight-blue"><a><i class="fa fa-twitter"></i></a></li>
                             </ul>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
