--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <p style="text-align: justify;">Nous sommes, la plupart du temps inconscients des
                                 facteurs déterminants de nos émotions et de nos
                                 comportements. </p>
-                            <p style="text-align: justify;">La mise en parole permettra une une prise de
+                            <p style="text-align: justify;">La mise en parole permettra une prise de
                                 conscience et de distance. Elle respecte le
                                 rythme du tout à chacun et la parole singulière
                                 du sujet.</p>
@@ -405,13 +405,13 @@
                     Service au public".
                 </p>
                 <p>
-                    Sur rendez vous au numéro : 06.61.39.70.80 (et non la mairie).
+                    Sur rendez vous au numéro : <a href="tel:+33661397080" target="_blank">06.61.39.70.80</a> (et non la mairie).
                 </p>
                 <p>
                     Ré-Unir est un espace chaleureux, simple et convivial, il suffit de s’autoriser à faire le pas.
                 </p>
                 <p>
-                    Je suis une psychanalyste membre de la fédération Européenne de Psychanalyse, superviseuse certifiée
+                    Je suis une psychanalyste membre de la Fédération Européenne de Psychanalyse, superviseuse certifiée
                     et éducatrice spécialisée DE.
                 </p>
 
