--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 <p>
                     Il nous arrive à toutes et à tous, à un moment ou à un autre, d’éprouver des problèmes d’ordre psychologique ou de vouloir mieux se comprendre... Et il n’est pas toujours possible de trouver en soi ou dans son entourage les ressources nécessaires pour faire face à la situation qui nous pose problème...
                 </p>
-                
+
                 <br>
 
                 <p>Ainsi, nous cheminerons ensemble pour :</p>
@@ -442,7 +442,7 @@
                 </ul>
                 <br>
 
-                <p>Une démarche de psychothérapie s’adresse à toute personne qui ressent le besoin ou l’envie d’évoluer.
+                <p>Une démarche de thérapie analytique s’adresse à toute personne qui ressent le besoin ou l’envie d’évoluer.
                     Faire le point sur soi et sa vie, trouver de nouvelles issues face aux situations qu’elle rencontre.
                     Restaurer ses capacités à sentir, identifier et répondre à ses besoins et tenter un retour vers le
                     mieux être, la confiance, l’équilibre, l’épanouissement et retrouver une harmonie. Harmonie
