--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="collapse navbar-collapse navbar-right"
                             id="myNavbar">
                             <ul class="nav navbar-nav">
-                                <li class="active"><a href="#banner">Home</a></li>
+                                <li class=""><a href="#banner">Home</a></li>
                                 <li class=""><a href="#intro">Introduction</a></li>
                                 <li class=""><a href="#service">Services</a></li>
                                 <li class=""><a href="#horaires">Horaires</a></li>
