--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
@@ -62,7 +62,7 @@
                         <div class="collapse navbar-collapse navbar-right"
                             id="myNavbar">
                             <ul class="nav navbar-nav">
-                                <li class=""><a href="#banner">Home</a></li>
+                                <li class=""><a href="#banner">Accueil</a></li>
                                 <li class=""><a href="#intro">Introduction</a></li>
                                 <li class=""><a href="#service">Services</a></li>
                                 <li class=""><a href="#horaires">Horaires</a></li>
