--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <hr style="max-width: 5rem" />
                     </div>
                     <div class="card-footer">
-                        <h4>250,00 €</h4>
+                        <h4>A définir.</h4>
                     </div>
                 </div>
 
@@ -266,7 +266,7 @@
                         <hr style="max-width: 5rem" />
                     </div>
                     <div class="card-footer">
-                        <h4>250,00 €</h4>
+                        <h4>A définir.</h4>
                     </div>
                 </div>
 
@@ -300,7 +300,7 @@
                         <hr style="max-width: 5rem" />
                     </div>
                     <div class="card-footer">
-                        <h4>250,00 €</h4>
+                        <h4>A définir.</h4>
                     </div>
                 </div>
     </section>
@@ -325,19 +325,7 @@
                                 border="1">
                                 <tbody>
                                     <tr>
-                                        <td>Lundi</td>
-                                        <td>18:00 - 20:00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Mardi</td>
-                                        <td>18:00 - 20:00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Mercredi</td>
-                                        <td>9:00 - 13:00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Jeudi</td>
+                                        <td>Lundi - Jeudi</td>
                                         <td>Fermé</td>
                                     </tr>
                                     <tr>
