Fixing little things

--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                     <div class="col-md-12 text-center">
                         © Ré-Unir. Tous droits réservés.
                         <div class="credits">
-                            Concu par <a href="https://princelle.org/" target="_blank">Maxime Princelle</a>
+                            Conçu par <a href="https://princelle.org/" target="_blank">Maxime Princelle</a>
                         </div>
                     </div>
                 </div>
