--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     data-spy="scroll"
     data-target=".navbar"
     data-offset="60">
+
     <!--banner-->
     <section id="banner"
         class="banner">
@@ -94,6 +95,7 @@
         </div>
     </section>
     <!--/ banner-->
+
     <!--intro-->
     <section id="intro"
         class="section-padding">
@@ -134,6 +136,7 @@
 
             <div class="services-cards">
                 <div class="card text-center">
+                    <img src="img/therapeute.jpg" class="card-img-top" alt="Image therapeute">
                     <div class="card-header">
                         <h5>Entretien thérapeutique individuel pour adultes</h5>
                         <p>séances de 30 à 45 mn</p>
@@ -176,6 +179,7 @@
 
 
                 <div class="card text-center">
+                    <img src="img/famille.jpg" class="card-img-top" alt="Image guidance famille">
                     <div class="card-header">
                         <h5>Guidance parentale pour une famille</h5>
                         <p>séances d'1h</p>
@@ -306,7 +310,6 @@
     </section>
     <!--/ services-->
 
-
     <!--horaires-->
     <section id="horaires"
         class="section-padding">
@@ -325,7 +328,15 @@
                                 border="1">
                                 <tbody>
                                     <tr>
-                                        <td>Lundi - Jeudi</td>
+                                        <td>Lundi</td>
+                                        <td>18:00 - 20:00</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mardi</td>
+                                        <td>18:00 - 20:00</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mercredi - Jeudi</td>
                                         <td>Fermé</td>
                                     </tr>
                                     <tr>
@@ -547,6 +558,7 @@
         </div>
     </section>
     <!--/ contact-->
+
     <!--footer-->
     <footer id="footer">
         <div class="top-footer">
@@ -623,6 +635,7 @@
         })();
     </script>
     <noscript><p><img src="//analytics.princelle.org/matomo.php?idsite=12&amp;rec=1" style="border:0;" alt="" /></p></noscript>
+
 </body>
 
 </html>
