--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
         content="width=device-width, initial-scale=1">
     <title>Ré-Unir</title>
     <meta name="description"
-        content="Ré-Unir : un espace de parole.">
+        content="Ré-Unir : un espace de parole. Psychanalyste à Roeschwoog.">
+
+    <!-- SEO -->
+    <meta name="keywords" content="reunir,ré-unir,psychanalyse,psychanalyste,psy,roeschwoog,strasbourg,audrey bauerle,audrey,bauerle">
 
     <!-- Leaflet -->
     <link rel="stylesheet"
