--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
 
                         <hr style="max-width: 5rem" />
                     </div>
-                    <div class="card-footer">
+                   <!--  <div class="card-footer">
                         <h4>60,00 €</h4>
-                    </div>
+                    </div> -->
                 </div>
 
 
@@ -217,9 +217,9 @@
 
                         <hr style="max-width: 5rem" />
                     </div>
-                    <div class="card-footer">
+                    <!-- <div class="card-footer">
                         <h4>80,00 €</h4>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -243,9 +243,9 @@
 
                         <hr style="max-width: 5rem" />
                     </div>
-                    <div class="card-footer">
+                    <!-- <div class="card-footer">
                         <h4>A définir.</h4>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="card text-center">
@@ -272,9 +272,9 @@
 
                         <hr style="max-width: 5rem" />
                     </div>
-                    <div class="card-footer">
+                    <!-- <div class="card-footer">
                         <h4>A définir.</h4>
-                    </div>
+                    </div> -->
                 </div>
 
 
@@ -306,9 +306,9 @@
 
                         <hr style="max-width: 5rem" />
                     </div>
-                    <div class="card-footer">
+                    <!-- <div class="card-footer">
                         <h4>A définir.</h4>
-                    </div>
+                    </div> -->
                 </div>
     </section>
     <!--/ services-->
