--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <p style="text-align: justify;">La psychanalyse se traverse, elle est libératrice et profondément humaine!...</p>
                         </div>
 
-                        <hr style="max-width: 5rem" />
+                        <!-- <hr style="max-width: 5rem" /> -->
                     </div>
                    <!--  <div class="card-footer">
                         <h4>60,00 €</h4>
@@ -215,7 +215,7 @@
                             ensemble des solutions adaptées à vos besoins !</p>
                         </div>
 
-                        <hr style="max-width: 5rem" />
+                        <!-- <hr style="max-width: 5rem" /> -->
                     </div>
                     <!-- <div class="card-footer">
                         <h4>80,00 €</h4>
@@ -241,7 +241,7 @@
                     <div class="card-body">
                         <p class="card-text">La supervision s’adresse à des personnes, des groupes ou des équipes et aspire à développer le positionnement, l’engagement et les responsabilités professionnelles. Les principes actifs sont la réflexion, l’intégration et la conceptualisation des contextes professionnels complexes.</p>
 
-                        <hr style="max-width: 5rem" />
+                        <!-- <hr style="max-width: 5rem" /> -->
                     </div>
                     <!-- <div class="card-footer">
                         <h4>A définir.</h4>
@@ -270,7 +270,7 @@
                             <p style="text-align: justify">Elle permet de nommer une difficulté rencontrée et de relancer le processus créatif de l'équipe qui veut bien se questionner. Dire pour prendre de la distance et trouver du sens!</p>
                         </div>
 
-                        <hr style="max-width: 5rem" />
+                        <!-- <hr style="max-width: 5rem" /> -->
                     </div>
                     <!-- <div class="card-footer">
                         <h4>A définir.</h4>
@@ -304,7 +304,7 @@
                             <p style="text-align: justify">Ensemble, une équipe est bien souvent meilleure que si chacun travaille seul. Mettre des mots sur les maux dans l’intérêt et le respect du tout à chacun!</p>
                         </div>
 
-                        <hr style="max-width: 5rem" />
+                        <!-- <hr style="max-width: 5rem" /> -->
                     </div>
                     <!-- <div class="card-footer">
                         <h4>A définir.</h4>
