--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
             <br /><br />
 
-            <h4>Psychanalyse et guidance parentale pour les particuliers</h4>
+            <h4>Accompagnement pour les particuliers et les familles</h4>
 
             <br />
 
@@ -141,7 +141,7 @@
                 <div class="card text-center">
                     <img src="img/therapeute.jpg" class="card-img-top" alt="Image therapeute">
                     <div class="card-header">
-                        <h5>Entretien thérapeutique individuel pour adultes</h5>
+                        <h5>Entretien thérapeutique individuel pour adultes, adolescents et enfants</h5>
                         <p>séances de 30 à 45 mn</p>
                         <br>
                     </div>
@@ -153,12 +153,12 @@
                             style="margin-top: 1.5rem;">
                             <a type="button"
                                 data-toggle="collapse"
-                                data-target="#details-particulier-adulte"><i style=" color: black; font-size: 28px;"
+                                data-target="#particuliers-details-services"><i style=" color: black; font-size: 28px;"
                                     class="fa fa-angle-down"></i></a>
                         </div>
 
                         <div class="collapse"
-                            id="details-particulier-adulte">
+                            id="particuliers-details-services">
                             <p style="text-align: justify;">Nous sommes, la plupart du temps inconscients des
                                 facteurs déterminants de nos émotions et de nos
                                 comportements. </p>
@@ -189,30 +189,33 @@
                         <br>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">La guidance parentale c'est permettre de développer une meilleure qualité de la fonction parentale.</p>
+                        <p class="card-text">La guidance parentale permet de développer une meilleure qualité de la fonction parentale et à l'enfant de trouver sa place.</p>
 
                         <div class="text-center"
                             style="margin-top: 1.5rem;">
                             <a type="button"
                                 data-toggle="collapse"
-                                data-target="#details-particulier-famille"><i style=" color: black; font-size: 28px;"
+                                data-target="#particuliers-details-services"><i style=" color: black; font-size: 28px;"
                                     class="fa fa-angle-down"></i></a>
                         </div>
 
-                        <div class="collapse"
-                            id="details-particulier-famille">
-                            <p style="text-align: justify">Soutenir, accompagner et valoriser les parents tout en apportant une écoute et des conseils pour améliorer ensemble les relations familiales.</p>
-                            <p style="text-align: justify">Dans le but de permettre à l'enfant de trouver sa place (diminution des difficultés et des symptômes) et de responsabilisé le parent dans sa fonction. </p>
-                            <p style="text-align: justify">Bienveillance, respect et climat de confiance sont nécessaires de part et d'autres pour qu'une amélioration soit possible et visible. </p>
-                            <p style="text-align: justify">En qualité d'ancienne éducatrice spécialisée dans
-                            le domaine de l'Aide Sociale à l'Enfance
-                            (accompagnement de familles, de jeunes adolescents
-                            en difficultés sociales, familiales et/ou pénales,
-                            accompagnement d'enfants de 0 à 6 ans), j'ai une
-                            expérience de terrain.</p>
-                            <p style="text-align: justify">En qualité de psychanalyste, j'ai développé
-                            l'écoute et la clinique. Mon but: tenter de trouver
-                            ensemble des solutions adaptées à vos besoins !</p>
+                        <div class="collapse" id="particuliers-details-services">
+                            <p style="text-align: justify">
+                                Soutenir, accompagner et valoriser les parents tout en apportant une écoute et des conseils pour améliorer ensemble les relations familiales.
+                            </p>
+                            <p style="text-align: justify">
+                                Traiter les conflits familiaux naissants d'une problématique de comportement, de compréhension, de gestion d'émotions, de conduite à risques, de mal être.
+                            </p>
+                            <p style="text-align: justify">
+                                En qualité d'ancienne éducatrice spécialisée en France, j'ai des expériences dans l'accompagnement des familles, des adolescents en difficultés sociales, familiales et/ou pénales.
+                            </p>
+                            <p style="text-align: justify">
+                                En Allemagne, j'ai accompagné des enfants de 0 à 6 ans en jardin d'enfants bilingue et de 11 à 16 ans en école privée spécialisée.
+                            </p>
+                            <p style="text-align: justify">
+                                En qualité de psychanalyste, j'ai développé
+                                l'écoute et la clinique.
+                            </p>
                         </div>
 
                         <!-- <hr style="max-width: 5rem" /> -->
@@ -227,15 +230,20 @@
 
             <br />
 
-            <h4>Psychanalyse pour les professionnels</h4>
+            <h4>Accompagnement des professionnels</h4>
 
             <br />
 
+            <img src="img/pros.jpg" class="container" alt="Image professionnels">
+
+            <br />
+            <br />
+
             <div class="services-cards">
-                <div class="card text-center">
+                <div class="card card-tiny text-center">
                     <div class="card-header">
                         <h5>Supervision</h5>
-                        <p>sur place, pendant 2h, pour max 5 professionnels</p>
+                        <p>pendant 2h, pour max 5 professionnels</p>
                         <br>
                     </div>
                     <div class="card-body">
@@ -248,27 +256,27 @@
                     </div> -->
                 </div>
 
-                <div class="card text-center">
+                <div class="card card-tiny text-center">
                     <div class="card-header">
                         <h5>Analyse des pratiques professionnelles</h5>
-                        <p>sur place, pendant 2h, pour max 5 professionnels</p>
+                        <p>pendant 2h, pour max 5 professionnels</p>
                         <br>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">La notion d'analyse des pratiques désigne une méthode fondée sur l'analyse d'expériences professionnelles, récentes ou en cours, présentées par leurs auteurs dans le cadre d'un groupe composé de personnes exerçant la même profession.</p>
+                        <p class="card-text">La notion d'analyse des pratiques désigne une méthode fondée sur l'analyse d'expériences professionnelles, récentes ou en cours, présentées par leurs auteurs dans le cadre d'un groupe composé de personnes exerçant la même profession et de relancer le processus créatif de l'équipe.</p>
 
-                        <div class="text-center"
+                        <!--<div class="text-center"
                             style="margin-top: 1.5rem;">
                             <a type="button"
                                 data-toggle="collapse"
-                                data-target="#details-pro-analyse"><i style=" color: black; font-size: 28px;"
+                                data-target="#pros-details-services"><i style=" color: black; font-size: 28px;"
                                     class="fa fa-angle-down"></i></a>
                         </div>
 
                         <div class="collapse"
-                            id="details-pro-analyse">
+                            id="pros-details-services">
                             <p style="text-align: justify">Elle permet de nommer une difficulté rencontrée et de relancer le processus créatif de l'équipe qui veut bien se questionner. Dire pour prendre de la distance et trouver du sens!</p>
-                        </div>
+                        </div>-->
 
                         <!-- <hr style="max-width: 5rem" /> -->
                     </div>
@@ -278,31 +286,31 @@
                 </div>
 
 
-                <div class="card text-center">
+                <div class="card card-tiny text-center">
                     <div class="card-header">
                         <h5>Régulation d'équipe</h5>
-                        <p>sur place, pendant 2h, pour max 5 professionnels</p>
+                        <p>pendant 2h, pour max 5 professionnels</p>
                         <br>
                     </div>
                     <div class="card-body">
                         <p class="card-text">La régulation permet d'éviter que chacun campe sur ses positions sans explications, provoquant frustrations et inefficacité collective.</p>
 
-                        <div class="text-center"
+                        <!--<div class="text-center"
                             style="margin-top: 1.5rem;">
                             <a type="button"
                                 data-toggle="collapse"
-                                data-target="#details-pro-regulation"><i style=" color: black; font-size: 28px;"
+                                data-target="#pros-details-services"><i style=" color: black; font-size: 28px;"
                                     class="fa fa-angle-down"></i></a>
                         </div>
 
                         <div class="collapse"
-                            id="details-pro-regulation">
+                            id="pros-details-services">
                             <p style="text-align: justify">La régulation est au
                             service de l'ouverture et de la coopération, et
                             permet à l'équipe d'être collectivement plus
                             efficace.</p>
                             <p style="text-align: justify">Ensemble, une équipe est bien souvent meilleure que si chacun travaille seul. Mettre des mots sur les maux dans l’intérêt et le respect du tout à chacun!</p>
-                        </div>
+                        </div>-->
 
                         <!-- <hr style="max-width: 5rem" /> -->
                     </div>
@@ -332,7 +340,7 @@
                                 <tbody>
                                     <tr>
                                         <td>Lundi</td>
-                                        <td>18:00 - 20:00</td>
+                                        <td>Fermé</td>
                                     </tr>
                                     <tr>
                                         <td>Mardi</td>
@@ -344,7 +352,7 @@
                                     </tr>
                                     <tr>
                                         <td>Vendredi</td>
-                                        <td>17:00 - 20:00</td>
+                                        <td>9:00 - 20:00</td>
                                     </tr>
                                     <tr>
                                         <td>Samedi</td>
