--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta name="description"
         content="Ré-Unir : un espace de parole. Psychanalyste à Roeschwoog.">
 
+    <!-- Cache -->
+    <meta http-equiv="cache-control" content="must-revalidate, post-check=0, pre-check=0" />
+    <meta http-equiv="cache-control" content="max-age=0" />
+
     <!-- SEO -->
     <meta name="keywords" content="reunir,ré-unir,psychanalyse,psychanalyste,psy,roeschwoog,strasbourg,audrey bauerle,audrey,bauerle">
 
