--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
             <br />
 
-            <img src="img/pros.jpg" class="container" alt="Image professionnels">
+            <div class="container text-center"><img src="img/pros.jpg" style="max-width: 100%;" class="img-fluid" alt="Image professionnels"></div>
 
             <br />
             <br />
