--- a/index.html
+++ b/index.html
@@ -484,6 +484,7 @@
                         <a href="mailto:re.unirpro67@gmail.com">re.unirpro67@gmail.com</a>
                         <br>
                     </p>
+                    <div class="space"></div>
                 </div>
                 <div class="col-md-8 col-sm-8 marb20">
 
