Fix accès & copyright

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                             <br>67480 Rœschwoog, France</a>
                         <br>
                     </p>
-                    <p>Accès : 2e étage de la mairie.</p>
+                    <p>Accès : 2e étage de la mairie. (Accès distinct)</p>
                     <div class="space"></div>
                     <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i><a href="tel:+33661397080"
                             target="_blank">+33 6 61 39 70 80</a>
@@ -576,7 +576,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        © Ré-Unir. Tous droits réservés.
+                        &copy; <script>
+                            document.write(new Date().getFullYear());
+                        </script> Ré-Unir. Tous droits réservés.
                         <div class="credits">
                             Conçu par <a href="https://princelle.org/" target="_blank">Maxime Princelle</a>
                         </div>
