--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             <div class="services-par">
                 <p>
-                    Ré-Unir offre des services destinées aux particuliers comme aux entreprises.
+                    Ré-Unir offre des services destinées aux particuliers comme aux professionnels.
                 </p>
             </div>
 
