--- a/index.html
+++ b/index.html
@@ -141,61 +141,108 @@
 
             <br />
 
-            <div class="services-cards">
-                <div class="card text-center">
-                    <img src="img/therapeute.jpg" class="card-img-top" alt="Image therapeute">
-                    <div class="card-header">
-                        <h5>Entretien thérapeutique individuel pour adultes, adolescents et enfants</h5>
-                        <p>séances de 30 à 45 mn</p>
-                        <br>
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">La psychanalyse désigne un mode de traitement psychologique qui se base sur
-                            les concepts liés aux processus mentaux inconscients.</p>
+            <div class="space-under">
 
-                        <div class="text-center"
-                            style="margin-top: 1.5rem;">
-                            <a type="button"
-                                data-toggle="collapse"
-                                data-target="#particuliers-details"><i style=" color: black; font-size: 28px;"
-                                    class="fa fa-angle-down"></i></a>
+                <div class="services-cards">
+                    <div class="card text-center">
+                        <img src="img/therapeute.jpg" class="card-img-top" alt="Image therapeute">
+                        <div class="card-header">
+                            <h5>Entretien thérapeutique individuel pour adultes, adolescents et enfants</h5>
+                            <p>séances de 30 à 45 mn</p>
+                            <br>
                         </div>
+                        <div class="card-body">
+                            <p class="card-text">La psychanalyse désigne un mode de traitement psychologique qui se base sur
+                                les concepts liés aux processus mentaux inconscients.</p>
 
-                        <div class="collapse"
-                            id="particuliers-details">
-                            <p style="text-align: justify;">Nous sommes, la plupart du temps inconscients des
-                                facteurs déterminants de nos émotions et de nos
-                                comportements. </p>
-                            <p style="text-align: justify;">La mise en parole permettra une prise de
-                                conscience et de distance. Elle respecte le
-                                rythme du tout à chacun et la parole singulière
-                                du sujet.</p>
-                            <p style="text-align: justify;">Elle est humble car le thérapeute a lui-même
-                                vécu une analyse personnelle, plusieurs années
-                                de formations et d'expériences professionnelles
-                                avant de pouvoir exercer.</p>
-                            <p style="text-align: justify;">La psychanalyse se traverse, elle est libératrice et profondément humaine!...</p>
+                            <div class="text-center"
+                                style="margin-top: 1.5rem;">
+                                <a type="button"
+                                    data-toggle="collapse"
+                                    data-target="#particuliers-details"><i style=" color: black; font-size: 28px;"
+                                        class="fa fa-angle-down"></i></a>
+                            </div>
+
+                            <div class="collapse"
+                                id="particuliers-details">
+                                <p style="text-align: justify;">Nous sommes, la plupart du temps inconscients des
+                                    facteurs déterminants de nos émotions et de nos
+                                    comportements. </p>
+                                <p style="text-align: justify;">La mise en parole permettra une prise de
+                                    conscience et de distance. Elle respecte le
+                                    rythme du tout à chacun et la parole singulière
+                                    du sujet.</p>
+                                <p style="text-align: justify;">Elle est humble car le thérapeute a lui-même
+                                    vécu une analyse personnelle, plusieurs années
+                                    de formations et d'expériences professionnelles
+                                    avant de pouvoir exercer.</p>
+                                <p style="text-align: justify;">La psychanalyse se traverse, elle est libératrice et profondément humaine!...</p>
+                            </div>
+
+                            <!-- <hr style="max-width: 5rem" /> -->
                         </div>
-
-                        <!-- <hr style="max-width: 5rem" /> -->
+                    <!--  <div class="card-footer">
+                            <h4>60,00 €</h4>
+                        </div> -->
                     </div>
-                   <!--  <div class="card-footer">
-                        <h4>60,00 €</h4>
-                    </div> -->
+
+                    <div class="card text-center">
+                        <img src="img/famille.jpg" class="card-img-top" alt="Image guidance famille">
+                        <div class="card-header">
+                            <h5>Guidance parentale pour une famille</h5>
+                            <p>séances d'1h</p>
+                            <br>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">La guidance parentale permet de développer une meilleure qualité de la fonction parentale et à l'enfant de trouver sa place.</p>
+
+                            <div class="text-center"
+                                style="margin-top: 1.5rem;">
+                                <a type="button"
+                                    data-toggle="collapse"
+                                    data-target="#particuliers-details"><i style=" color: black; font-size: 28px;"
+                                        class="fa fa-angle-down"></i></a>
+                            </div>
+
+                            <div class="collapse" id="particuliers-details">
+                                <p style="text-align: justify">
+                                    Soutenir, accompagner et valoriser les parents tout en apportant une écoute et des conseils pour améliorer ensemble les relations familiales.
+                                </p>
+                                <p style="text-align: justify">
+                                    Traiter les conflits familiaux naissants d'une problématique de comportement, de compréhension, de gestion d'émotions, de conduite à risques, de mal être.
+                                </p>
+                                <p style="text-align: justify">
+                                    En qualité d'ancienne éducatrice spécialisée en France, j'ai des expériences dans l'accompagnement des familles, des adolescents en difficultés sociales, familiales et/ou pénales.
+                                </p>
+                                <p style="text-align: justify">
+                                    En Allemagne, j'ai accompagné des enfants de 0 à 6 ans en jardin d'enfants bilingue et de 11 à 16 ans en école privée spécialisée.
+                                </p>
+                                <p style="text-align: justify">
+                                    En qualité de psychanalyste, j'ai développé
+                                    l'écoute et la clinique.
+                                </p>
+                            </div>
+
+                            <!-- <hr style="max-width: 5rem" /> -->
+                        </div>
+                        <!-- <div class="card-footer">
+                            <h4>80,00 €</h4>
+                        </div> -->
+                    </div>
                 </div>
-
-
-                <div class="card text-center">
-                    <img src="img/famille.jpg" class="card-img-top" alt="Image guidance famille">
+                
+                <div class="services-cards">
+                    <div class="card text-center ">
+                    <!--<img src="img/famille.jpg" class="card-img-top" alt="Image guidance famille">-->
                     <div class="card-header">
-                        <h5>Guidance parentale pour une famille</h5>
+                        <h5>Hypnose</h5>
                         <p>séances d'1h</p>
                         <br>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">La guidance parentale permet de développer une meilleure qualité de la fonction parentale et à l'enfant de trouver sa place.</p>
+                        <p class="card-text">Gestion de stress, addiction, douleurs chroniques, phobies/peurs, surpoids.</p>
 
-                        <div class="text-center"
+                        <!--<div class="text-center"
                             style="margin-top: 1.5rem;">
                             <a type="button"
                                 data-toggle="collapse"
@@ -220,17 +267,17 @@
                                 En qualité de psychanalyste, j'ai développé
                                 l'écoute et la clinique.
                             </p>
-                        </div>
+                        </div>-->
 
                         <!-- <hr style="max-width: 5rem" /> -->
                     </div>
                     <!-- <div class="card-footer">
                         <h4>80,00 €</h4>
                     </div> -->
+                    </div>
                 </div>
+
             </div>
-
-
 
             <br />
 
