Fix details particuliers

--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
                                 style="margin-top: 1.5rem;">
                                 <a type="button"
                                     data-toggle="collapse"
-                                    data-target="#particuliers-details"><i style=" color: black; font-size: 28px;"
+                                    data-target="#particuliers-details-entretien"><i style=" color: black; font-size: 28px;"
                                         class="fa fa-angle-down"></i></a>
                             </div>
 
                             <div class="collapse"
-                                id="particuliers-details">
+                                id="particuliers-details-entretien">
                                 <p style="text-align: justify;">Nous sommes, la plupart du temps inconscients des
                                     facteurs déterminants de nos émotions et de nos
                                     comportements. </p>
@@ -200,11 +200,11 @@
                                 style="margin-top: 1.5rem;">
                                 <a type="button"
                                     data-toggle="collapse"
-                                    data-target="#particuliers-details"><i style=" color: black; font-size: 28px;"
+                                    data-target="#particuliers-details-gui_parents"><i style=" color: black; font-size: 28px;"
                                         class="fa fa-angle-down"></i></a>
                             </div>
 
-                            <div class="collapse" id="particuliers-details">
+                            <div class="collapse" id="particuliers-details-gui_parents">
                                 <p style="text-align: justify">
                                     Soutenir, accompagner et valoriser les parents tout en apportant une écoute et des conseils pour améliorer ensemble les relations familiales.
                                 </p>
