Add hypnose img

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 
                 <div class="services-cards">
                     <div class="card text-center ">
-                    <!--<img src="img/famille.jpg" class="card-img-top" alt="Image guidance famille">-->
+                    <img src="img/hypnose.jpg" class="card-img-top" alt="Image hypnose">
                     <div class="card-header">
                         <h5>Hypnose</h5>
                         <p>séances d'1h</p>
